contest_cloudformation.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation for ISUCON14
Resources:
  GetAvailabilityZoneFunctionExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: "/"
      Policies:
        - PolicyName: GetAvailabilityZoneFunctionPolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - ec2:DescribeAvailabilityZones
                Resource: "*"
  GetAvailabilityZoneFunction:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        ZipFile: |
          import cfnresponse
          import boto3
          def handler(event, context):
            if event['RequestType'] == "Create":
              ec2 = boto3.client('ec2')
              response = ec2.describe_availability_zones(
                ZoneIds = ['apne1-az2']
              )
              ZoneName = response['AvailabilityZones'][0]['ZoneName']
              cfnresponse.send(event, context, cfnresponse.SUCCESS, {"ZoneName" : ZoneName})
            elif event['RequestType'] == "Update":
              cfnresponse.send(event, context, cfnresponse.SUCCESS, {})
            elif event['RequestType'] == "Delete":
              cfnresponse.send(event, context, cfnresponse.SUCCESS, {})
      Handler: index.handler
      Runtime: python3.12
      Timeout: 30
      Role: !GetAtt GetAvailabilityZoneFunctionExecutionRole.Arn
  GetAvailabilityZone:
    Type: Custom::PythonLambdaExecution
    Properties:
      ServiceToken: !GetAtt GetAvailabilityZoneFunction.Arn

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "192.168.0.0/16"
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      InstanceTenancy: default
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !GetAtt GetAvailabilityZone.ZoneName
      CidrBlock: "192.168.0.0/24"
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: False
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable
    DependsOn:
      - Subnet
      - RouteTable
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Security Group for ISUCON14
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: -1
          CidrIp: "192.168.0.0/24"

  InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: "/"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
      Policies:
        - PolicyName: IsuconEC2InstancePolicy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - ec2:DescribeInstances
                  - ec2:DescribeVolumes
                  - ec2:DescribeNetworkInterfaces
                  - ec2:DescribeSecurityGroups
                  - ec2:DescribeAvailabilityZones
                Resource: "*"
  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
        - !Ref InstanceRole

  Instance1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0e334c50145a3ee41
      InstanceType: c5.large
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.11"
      IamInstanceProfile:
        !Ref InstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 20
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon14-contest-1
      UserData:
        Fn::Base64: |
          #cloud-config
          write_files:
          - path: /opt/isucon-env-checker/portal_credentials.json
            owner: root:root
            permissions: '0644'
            encoding: b64
            content: 'eyJ0b2tlbiI6IjV4SDQ5eGQ5dU9jaDZnUzZJaEk1M1Y2U1RjNHhPZEU3X1VScVhIVnFlUktWSlBpMmNoNFp3M0V0TXc5YVMxdUg6ZXlKMFpXRnRYMmxrSWpvek5EWXNJbVY0Y0dseWVTSTZNVGN6TXpjek5EZ3dNSDAiLCJkZXYiOmZhbHNlLCJob3N0IjoicG9ydGFsLmlzdWNvbi5uZXQifQ=='
          runcmd:
            - 'curl --retry 5 --retry-connrefused --max-time 10 --connect-timeout 5 "https://portal.isucon.net/api/ssh_public_keys?token=5xH49xd9uOch6gS6IhI53V6STc4xOdE7_URqXHVqeRKVJPi2ch4Zw3EtMw9aS1uH:eyJ0ZWFtX2lkIjozNDYsImV4cGlyeSI6MTczMzczNDgwMH0" | sudo -u isucon sh -c "umask 077; cat > /home/isucon/.ssh/authorized_keys"'
  InstanceIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref Instance1
  Instance2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0e334c50145a3ee41
      InstanceType: c5.large
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.12"
      IamInstanceProfile:
        !Ref InstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 20
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon14-contest-2
      UserData:
        Fn::Base64: |
          #cloud-config
          write_files:
          - path: /opt/isucon-env-checker/portal_credentials.json
            owner: root:root
            permissions: '0644'
            encoding: b64
            content: 'eyJ0b2tlbiI6IjV4SDQ5eGQ5dU9jaDZnUzZJaEk1M1Y2U1RjNHhPZEU3X1VScVhIVnFlUktWSlBpMmNoNFp3M0V0TXc5YVMxdUg6ZXlKMFpXRnRYMmxrSWpvek5EWXNJbVY0Y0dseWVTSTZNVGN6TXpjek5EZ3dNSDAiLCJkZXYiOmZhbHNlLCJob3N0IjoicG9ydGFsLmlzdWNvbi5uZXQifQ=='
          runcmd:
            - 'curl --retry 5 --retry-connrefused --max-time 10 --connect-timeout 5 "https://portal.isucon.net/api/ssh_public_keys?token=5xH49xd9uOch6gS6IhI53V6STc4xOdE7_URqXHVqeRKVJPi2ch4Zw3EtMw9aS1uH:eyJ0ZWFtX2lkIjozNDYsImV4cGlyeSI6MTczMzczNDgwMH0" | sudo -u isucon sh -c "umask 077; cat > /home/isucon/.ssh/authorized_keys"'
  InstanceIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref Instance2
  Instance3:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0e334c50145a3ee41
      InstanceType: c5.large
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.13"
      IamInstanceProfile:
        !Ref InstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 20
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon14-contest-3
      UserData:
        Fn::Base64: |
          #cloud-config
          write_files:
          - path: /opt/isucon-env-checker/portal_credentials.json
            owner: root:root
            permissions: '0644'
            encoding: b64
            content: 'eyJ0b2tlbiI6IjV4SDQ5eGQ5dU9jaDZnUzZJaEk1M1Y2U1RjNHhPZEU3X1VScVhIVnFlUktWSlBpMmNoNFp3M0V0TXc5YVMxdUg6ZXlKMFpXRnRYMmxrSWpvek5EWXNJbVY0Y0dseWVTSTZNVGN6TXpjek5EZ3dNSDAiLCJkZXYiOmZhbHNlLCJob3N0IjoicG9ydGFsLmlzdWNvbi5uZXQifQ=='
          runcmd:
            - 'curl --retry 5 --retry-connrefused --max-time 10 --connect-timeout 5 "https://portal.isucon.net/api/ssh_public_keys?token=5xH49xd9uOch6gS6IhI53V6STc4xOdE7_URqXHVqeRKVJPi2ch4Zw3EtMw9aS1uH:eyJ0ZWFtX2lkIjozNDYsImV4cGlyeSI6MTczMzczNDgwMH0" | sudo -u isucon sh -c "umask 077; cat > /home/isucon/.ssh/authorized_keys"'
  InstanceIP3:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref Instance3
